--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,8 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -41,7 +38,7 @@
 .MainScreen{
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .navigator{
@@ -54,18 +51,12 @@
   font-size: calc(10px + 2vmin);
 }
 
-.dashboard{
-  background-color: white;
-  flex: 6;
-  display: flex;
-  flex-direction: column;
-}
 
 .records{
   background-color: white;
   flex: 6;
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
 }
 
 .escapeBtn{
